src/test/deca/context/valid/sansObjet/EmptyClass.deca
class Empty{

}

{
    Empty e =new Empty();
}