src/test/deca/context/invalid/object/fieldDefinitionInSuper.deca
class A
{
  float b(){}
}

class B extends A
{
  int b;
}
